# pig-automat

./: CMakeLists.txt
src/: basewindow.cpp  basewindow.h  basewindow.ui  coinwindow.cpp  coinwindow.h  coinwindow.ui  main.cpp  paymentwindows.cpp  paymentwindows.h  paymentwindows.ui  summary.ui
